# Aether

./: .gitignore  EXPERIMENT.md  PHASE_A_AUDIT.md  README.md  SPEC_ISSUES.md  STATUS.md  V02_CLOSEOUT.md  V03_CLOSEOUT.md  pyproject.toml
audits/: llm_judge_prompt.md
bench/: AI_GENERATION_BENCHMARK_PLAN.md  CONTRACT_TASKS.md  harness.py
docs/: AETHER_EFFECT_AWARE_HELPERS_REPORT.md  AETHER_EFFECT_ROW_PRECISION_REPORT.md  AETHER_EXPLICIT_GENERIC_CALLS_REPORT.md  AETHER_FIX_PLAN_RESULTS.md  AETHER_FUNCTION_TYPE_EFFECTS_REPORT.md  AETHER_LANGUAGE_COMPLETION_REPORT.md  AETHER_LANGUAGE_GUIDE.md  AETHER_LOOP_INVARIANTS_REPORT.md  AETHER_OPTION_RESULT_ERGONOMICS_REPORT.md  AETHER_QUANTIFIERS_REPORT.md  AETHER_SAFE_LIST_HELPERS_REPORT.md  FEATURE_MATRIX.md  LISTS.md
examples/: 01_safe_divide.aeth  02_non_empty_average.aeth  03_sorted_binary_search.aeth  04_bounded_index_update.aeth  05_safe_normalize_weights.aeth  06_safe_at.aeth  07_update_at.aeth  08_safe_slice.aeth  09_option_helpers.aeth  10_result_helpers.aeth  11_exhaustive_match.aeth  12_pure_option_result_chaining.aeth  13_effect_aware_helpers.aeth  14_function_type_effects.aeth  15_effect_row_precision_direct.aeth  16_effect_row_precision_function_type.aeth  17_effect_row_precision_option_result.aeth  18_deterministic_random.aeth  19_deterministic_time.aeth  20_explicit_generic_id.aeth  21_explicit_generic_collections.aeth  22_quantifiers_simple.aeth  23_sort_and_permutation.aeth  24_loop_invariant_bubble_sort.aeth  25_record_update.aeth  26_continue_invariants.aeth  27_record_literal.aeth  README.md
(+1437 files in other folders)
