[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aether-lang-prototype"
version = "0.1.0"
description = "Experimental AI-native programming language prototype"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "z3-solver==4.16.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.scripts]
aether = "transpiler.aether.cli:main"

[tool.setuptools.packages.find]
include = ["transpiler*"]
